--- a/app/src/main/res/layout/fragment_club_manager_club_activities.xml
+++ b/app/src/main/res/layout/fragment_club_manager_club_activities.xml
@@ -7,6 +7,16 @@
     tools:context=".ui.home.clubManager.ClubManagerClubActivitiesFragment">
 
     <TextView
+        android:id="@+id/textView58"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="52dp"
+        android:text="_________________________________________________________"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
