--- a/app/src/main/res/layout/fragment_club_manager_club.xml
+++ b/app/src/main/res/layout/fragment_club_manager_club.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".ui.home.clubManager.ClubManagerClubFragment">
 
+    <TextView
+        android:id="@+id/textView58"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="52dp"
+        android:text="_________________________________________________________"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/club_manager_clubs_fragment_recyclerview"
         android:layout_width="0dp"
@@ -34,9 +44,9 @@
         android:id="@+id/club_manager_club_fragment_search_view"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="80dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="24dp"
         android:background="@drawable/normal_background"
         android:backgroundTint="#EBEBEB"
         app:iconifiedByDefault="false"
