--- a/app/src/main/res/layout/fragment_club_manager_profile.xml
+++ b/app/src/main/res/layout/fragment_club_manager_profile.xml
@@ -82,7 +82,7 @@
         android:layout_marginTop="9dp"
         android:fontFamily="@font/poppins"
         android:text="My Club"
-        android:textSize="15sp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView58" />
@@ -91,11 +91,12 @@
         android:id="@+id/textView58"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="52dp"
         android:text="_________________________________________________________"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView24" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView24"
@@ -104,7 +105,7 @@
         android:layout_marginTop="32dp"
         android:fontFamily="@font/poppins"
         android:text="My Profile"
-        android:textSize="16sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
