--- a/app/src/main/res/layout/fragment_sks_admin_edits_club_pending.xml
+++ b/app/src/main/res/layout/fragment_sks_admin_edits_club_pending.xml
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/poppins"
-        android:text="Edit Post"
+        android:text="Club Edit"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
