Fixed design issues

--- a/app/src/main/res/layout/fragment_sks_admin_forms_rejected_detail.xml
+++ b/app/src/main/res/layout/fragment_sks_admin_forms_rejected_detail.xml
@@ -96,7 +96,8 @@
                 android:background="@drawable/normal_background"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:inputType="text"
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -130,7 +131,8 @@
                 android:clickable="false"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:inputType="text"
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -149,7 +151,8 @@
                 android:clickable="false"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:inputType="text"
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -180,7 +183,8 @@
                 android:clickable="false"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:inputType="text"
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -212,7 +216,8 @@
                 android:clickable="false"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:inputType="text"
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -244,7 +249,8 @@
                 android:background="@drawable/normal_background"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:inputType="text"
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
