--- a/app/src/main/res/layout/fragment_sks_admin_posts_rejected_detail.xml
+++ b/app/src/main/res/layout/fragment_sks_admin_posts_rejected_detail.xml
@@ -68,7 +68,6 @@
                 android:drawableLeft="@drawable/request_approved_icon"
                 android:fontFamily="@font/poppins"
                 android:gravity="center"
-                android:paddingLeft="32dp"
                 android:scaleType="centerCrop"
                 android:text="Your request has been approved"
                 android:textSize="12sp"
@@ -100,7 +99,8 @@
                 android:background="@drawable/normal_background"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:inputType="text"
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -134,7 +134,8 @@
                 android:clickable="false"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:inputType="text"
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -153,7 +154,8 @@
                 android:clickable="false"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:inputType="text"
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -184,7 +186,8 @@
                 android:clickable="false"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:inputType="text"
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -216,7 +219,8 @@
                 android:clickable="false"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:inputType="text"
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -248,7 +252,8 @@
                 android:background="@drawable/normal_background"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:inputType="text"
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
