--- a/app/src/main/res/layout/fragment_sks_admin_clubs_create.xml
+++ b/app/src/main/res/layout/fragment_sks_admin_clubs_create.xml
@@ -102,7 +102,8 @@
         android:layout_height="40dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="31dp"
-        android:paddingLeft="8dp"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/normal_background"
         android:backgroundTint="#F0F0F0"
@@ -125,6 +126,8 @@
         android:background="@drawable/normal_background"
         android:backgroundTint="#F0F0F0"
         android:ems="10"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
         android:fontFamily="@font/poppins"
         android:inputType="textMultiLine"
         app:layout_constraintEnd_toEndOf="parent"
