--- a/app/src/main/res/layout/fragment_sks_admin_edits_club_pending.xml
+++ b/app/src/main/res/layout/fragment_sks_admin_edits_club_pending.xml
@@ -99,6 +99,8 @@
         android:layout_marginTop="60dp"
         android:layout_marginEnd="32dp"
         android:autofillHints=""
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
         android:background="@drawable/normal_background"
         android:ems="10"
         android:fontFamily="@font/poppins"
@@ -128,6 +130,8 @@
         android:id="@+id/sks_admin_edit_club_description"
         android:layout_width="0dp"
         android:layout_height="175dp"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="32dp"
