--- a/app/src/main/res/layout/fragment_sks_admin_edits_posts_pending.xml
+++ b/app/src/main/res/layout/fragment_sks_admin_edits_posts_pending.xml
@@ -81,10 +81,11 @@
                 android:layout_marginTop="60dp"
                 android:layout_marginEnd="32dp"
                 android:autofillHints=""
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
                 android:background="@drawable/normal_background"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:inputType="text"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -116,9 +117,10 @@
                 android:autofillHints=""
                 android:background="@drawable/normal_background"
                 android:clickable="false"
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:inputType="text"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -133,11 +135,12 @@
                 android:layout_marginTop="12dp"
                 android:layout_marginEnd="32dp"
                 android:autofillHints=""
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
                 android:background="@drawable/normal_background"
                 android:clickable="false"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:inputType="text"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -166,9 +169,10 @@
                 android:autofillHints=""
                 android:background="@drawable/normal_background"
                 android:clickable="false"
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:inputType="text"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -199,8 +203,9 @@
                 android:background="@drawable/normal_background"
                 android:clickable="false"
                 android:ems="10"
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
                 android:fontFamily="@font/poppins"
-                android:inputType="text"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -231,8 +236,9 @@
                 android:autofillHints=""
                 android:background="@drawable/normal_background"
                 android:ems="10"
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
                 android:fontFamily="@font/poppins"
-                android:inputType="text"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
