--- a/app/src/main/res/layout/fragment_sks_admin_forms_pending_detail.xml
+++ b/app/src/main/res/layout/fragment_sks_admin_forms_pending_detail.xml
@@ -95,6 +95,8 @@
                 android:autofillHints=""
                 android:background="@drawable/normal_background"
                 android:ems="10"
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
                 android:fontFamily="@font/poppins"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -128,6 +130,8 @@
                 android:background="@drawable/normal_background"
                 android:clickable="false"
                 android:ems="10"
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
                 android:fontFamily="@font/poppins"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -141,6 +145,8 @@
                 android:layout_height="90dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="12dp"
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
                 android:layout_marginEnd="32dp"
                 android:autofillHints=""
                 android:background="@drawable/normal_background"
@@ -173,6 +179,8 @@
                 android:layout_marginTop="12dp"
                 android:layout_marginEnd="32dp"
                 android:autofillHints=""
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
                 android:background="@drawable/normal_background"
                 android:clickable="false"
                 android:ems="10"
@@ -204,6 +212,8 @@
                 android:layout_marginTop="12dp"
                 android:layout_marginEnd="32dp"
                 android:autofillHints=""
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
                 android:background="@drawable/normal_background"
                 android:clickable="false"
                 android:ems="10"
@@ -236,6 +246,8 @@
                 android:layout_marginEnd="32dp"
                 android:layout_marginBottom="150dp"
                 android:autofillHints=""
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
                 android:background="@drawable/normal_background"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
