Fixed design issues

--- a/app/src/main/res/layout/fragment_sks_admin_clubs_create.xml
+++ b/app/src/main/res/layout/fragment_sks_admin_clubs_create.xml
@@ -102,12 +102,13 @@
         android:layout_height="40dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="31dp"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/normal_background"
         android:backgroundTint="#F0F0F0"
         android:ems="10"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
+        android:paddingTop="6dp"
         android:fontFamily="@font/poppins"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
@@ -119,15 +120,15 @@
         android:id="@+id/sks_admin_clubs_create_et_club_description"
         android:layout_width="0dp"
         android:layout_height="126dp"
-        android:paddingLeft="8dp"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
+        android:paddingTop="6dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="25dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/normal_background"
         android:backgroundTint="#F0F0F0"
         android:ems="10"
-        android:paddingStart="4dp"
-        android:paddingEnd="4dp"
         android:fontFamily="@font/poppins"
         android:inputType="textMultiLine"
         app:layout_constraintEnd_toEndOf="parent"
