--- a/app/src/main/res/layout/fragment_sks_admin_edits_posts_pending.xml
+++ b/app/src/main/res/layout/fragment_sks_admin_edits_posts_pending.xml
@@ -81,12 +81,13 @@
                 android:layout_marginTop="60dp"
                 android:layout_marginEnd="32dp"
                 android:autofillHints=""
-                android:paddingStart="4dp"
-                android:paddingEnd="4dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:background="@drawable/normal_background"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:textSize="12sp"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/sks_admin_edit_post_photo" />
@@ -117,8 +118,9 @@
                 android:autofillHints=""
                 android:background="@drawable/normal_background"
                 android:clickable="false"
-                android:paddingStart="4dp"
-                android:paddingEnd="4dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
                 android:textSize="12sp"
@@ -135,8 +137,9 @@
                 android:layout_marginTop="12dp"
                 android:layout_marginEnd="32dp"
                 android:autofillHints=""
-                android:paddingStart="4dp"
-                android:paddingEnd="4dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:background="@drawable/normal_background"
                 android:clickable="false"
                 android:ems="10"
@@ -169,8 +172,9 @@
                 android:autofillHints=""
                 android:background="@drawable/normal_background"
                 android:clickable="false"
-                android:paddingStart="4dp"
-                android:paddingEnd="4dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
                 android:textSize="12sp"
@@ -203,8 +207,9 @@
                 android:background="@drawable/normal_background"
                 android:clickable="false"
                 android:ems="10"
-                android:paddingStart="4dp"
-                android:paddingEnd="4dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:fontFamily="@font/poppins"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -236,8 +241,9 @@
                 android:autofillHints=""
                 android:background="@drawable/normal_background"
                 android:ems="10"
-                android:paddingStart="4dp"
-                android:paddingEnd="4dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:fontFamily="@font/poppins"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
