--- a/app/src/main/res/layout/fragment_sks_admin_forms_approved_detail.xml
+++ b/app/src/main/res/layout/fragment_sks_admin_forms_approved_detail.xml
@@ -133,8 +133,9 @@
                 android:clickable="false"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:paddingStart="4dp"
-                android:paddingEnd="4dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -153,8 +154,9 @@
                 android:clickable="false"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:paddingStart="4dp"
-                android:paddingEnd="4dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -185,8 +187,9 @@
                 android:clickable="false"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:paddingStart="4dp"
-                android:paddingEnd="4dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -218,9 +221,10 @@
                 android:clickable="false"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:paddingStart="4dp"
-                android:paddingEnd="4dp"
-                android:textSize="12sp"
+                android:paddingTop="8dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView71" />
