--- a/app/src/main/res/layout/fragment_sks_admin_forms_pending_detail.xml
+++ b/app/src/main/res/layout/fragment_sks_admin_forms_pending_detail.xml
@@ -95,8 +95,9 @@
                 android:autofillHints=""
                 android:background="@drawable/normal_background"
                 android:ems="10"
-                android:paddingStart="4dp"
-                android:paddingEnd="4dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:fontFamily="@font/poppins"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -130,8 +131,9 @@
                 android:background="@drawable/normal_background"
                 android:clickable="false"
                 android:ems="10"
-                android:paddingStart="4dp"
-                android:paddingEnd="4dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:fontFamily="@font/poppins"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -145,8 +147,9 @@
                 android:layout_height="90dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="12dp"
-                android:paddingStart="4dp"
-                android:paddingEnd="4dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:layout_marginEnd="32dp"
                 android:autofillHints=""
                 android:background="@drawable/normal_background"
@@ -179,8 +182,9 @@
                 android:layout_marginTop="12dp"
                 android:layout_marginEnd="32dp"
                 android:autofillHints=""
-                android:paddingStart="4dp"
-                android:paddingEnd="4dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:background="@drawable/normal_background"
                 android:clickable="false"
                 android:ems="10"
@@ -212,8 +216,9 @@
                 android:layout_marginTop="12dp"
                 android:layout_marginEnd="32dp"
                 android:autofillHints=""
-                android:paddingStart="4dp"
-                android:paddingEnd="4dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:background="@drawable/normal_background"
                 android:clickable="false"
                 android:ems="10"
@@ -246,8 +251,9 @@
                 android:layout_marginEnd="32dp"
                 android:layout_marginBottom="150dp"
                 android:autofillHints=""
-                android:paddingStart="4dp"
-                android:paddingEnd="4dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:background="@drawable/normal_background"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
