--- a/app/src/main/res/layout/fragment_sks_admin_posts_pending_detail.xml
+++ b/app/src/main/res/layout/fragment_sks_admin_posts_pending_detail.xml
@@ -96,9 +96,10 @@
                 android:background="@drawable/normal_background"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:paddingStart="4dp"
-                android:paddingEnd="4dp"
-                android:textSize="12sp"
+                android:paddingTop="8dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/sks_admin_posts_pending_photo" />
@@ -131,8 +132,9 @@
                 android:clickable="false"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:paddingStart="4dp"
-                android:paddingEnd="4dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -151,8 +153,9 @@
                 android:clickable="false"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:paddingStart="4dp"
-                android:paddingEnd="4dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -183,8 +186,9 @@
                 android:clickable="false"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:paddingStart="4dp"
-                android:paddingEnd="4dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -215,10 +219,11 @@
                 android:background="@drawable/normal_background"
                 android:clickable="false"
                 android:ems="10"
+                android:paddingTop="8dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:textSize="16sp"
                 android:fontFamily="@font/poppins"
-                android:paddingStart="4dp"
-                android:paddingEnd="4dp"
-                android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView711" />
@@ -249,9 +254,10 @@
                 android:background="@drawable/normal_background"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:paddingStart="4dp"
-                android:paddingEnd="4dp"
-                android:textSize="12sp"
+                android:paddingTop="8dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
